# graph-core

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_platform_schema.py  0002_graph_rag_tables.py  0003_graph_rag_vector_tables.py  0004_add_base_url_to_profiles.py  0005_per_collection_vec_tables.py  0005_per_collection_vector_tables.py  0006_add_light_rag_ingest_strategy.py  0007_namespace_rls_policies.py  0008_auth_tables.py  0009_fix_api_key_prefix_length.py  0010_add_profile_concurrency_limit.py  0011_add_collection_gleaning_passes.py  0012_add_chat_sessions.py  0013_add_chat_messages.py  0014_add_relationship_rel_type.py  0015_aliases_per_collection.py  0015_scope_entity_aliases_to_collection.py  0016_drop_namespace_api_key_columns.py  0017_merge_migration_heads.py  0018_add_query_and_enhance_job_types.py  0019_falkordb_namespace_acl.py  0020_falkordb_acl_info_fix.py  0021_falkordb_acl_exists_fix.py  0022_falkordb_graph_name_replay.py  0023_falkordb_namespace_db.py  0024_falkordb_acl_getuser_fix.py  0025_document_provenance_fields.py  0026_add_ingestion_chunk_leases.py  0027_add_chunk_cancelled_status.py  7c8b2d1c3f4e_add_graph_relationship_types.py  9f1a2b3c4d5e_add_relationship_type_alias_frequency.py  b433a5717427_add_llm_profile_id_to_collections.py  d7088ddd7fea_add_relationship_type_aliases.py
clients/graph-core-cli/: PATTERNS.md  README.md  pyproject.toml
clients/graph-core-cli/src/graph_core_cli/: __main__.py  app.py  config.py  mcp_client.py  screens.py
clients/graph-core-cli/tests/: test_mcp_client.py
docs/: HELPER.py  anchor_concept_burner.py  custom-graph-rag.md  graph_cluster_link_burner.py  graph_current_burner.py  graph_meta_burner.py  graph_metric_burner.py  kapha_concept.json  pitta_concept.json  role_triplet_burner.py  role_triplet_grouped_rels_burner.py  vata_concept.json
docs/anchor_burner_output/: emotional clinging_concept.json  heaviness_concept.json  illness_concept.json  inertia_concept.json  stagnation_concept.json
docs/llm_prompt_check/: code_prompt_burner.py  code_prompt_request.txt
docs/plans/: 2026-05-18-architecture-redesign.md  2026-05-28-architecture-audit.md  2026-05-28-authentication-plan.md
scripts/: entrypoint.sh  populate_rel_type_aliases.py
src/graph_core/: __init__.py  broker.py  client.py  config.py  database.py  main.py  provider_base_url.py  provider_semaphore.py
src/graph_core/api/: auth.py  chats.py  (+8 more)
tests/: conftest.py  test_llm_provider.py  test_main.py  test_provider_semaphore.py  test_query_llm_max_tokens.py
tests/test_api/: test_auth_jwt.py  test_collections.py  test_ingest.py  test_jobs.py  test_namespaces.py  test_platform.py
tests/test_migrations/: test_falkordb_graph_names.py
tests/test_proxy/: test_falkordb_proxy.py
tests/test_services/: test_auth_service.py  test_chunking.py  test_graph_rag_aliases.py  test_graph_service.py  test_ingestion_cleanup.py  test_sanitizer.py
tests/test_storage/: test_graph_names.py  test_graph_storage.py  test_meta_collections.py
tests/test_workers/: test_ingestion.py
(+83 files in other folders)
