[project]
name = "graph-core"
version = "0.1.0"
description = "AI-native knowledge infrastructure platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "dramatiq[redis]>=1.17.0",
    "httpx>=0.28.0",
    "openai>=1.58.0",
    "tiktoken>=0.8.0",
    "cryptography>=44.0.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
vector = [
    "chromadb>=0.5.0",
]
graph = [
    "falkordb>=1.0.0",
]
mcp = [
    "mcp[fastapi]>=1.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "httpx>=0.28.0",
]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
