[project]
name = "graph-core"
version = "0.1.0"
description = "AI-native knowledge infrastructure platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "greenlet>=3.1.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "dramatiq[redis]>=1.17.0",
    "redis>=5.0.0",
    "httpx>=0.28.0",
    "openai>=1.58.0",
    "tiktoken>=0.8.0",
    "cryptography>=44.0.0",
    "python-multipart>=0.0.18",
    "passlib[bcrypt]>=1.7.4",
    "langchain-text-splitters>=1.1.2",
    "chonkie[code]>=1.6.8",
]

[project.optional-dependencies]
cli = [
    "textual>=2.0.0",
]
vector = [
    "chromadb>=0.5.0",
]
graph = [
    "falkordb>=1.0.0",
    "networkx>=3.4.2",
]
mcp = [
    "mcp>=1.0.0",
]


[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "black>=25.1.0",
    "isort>=6.0.0",
    "autoflake>=2.3.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"

[project.scripts]
graph-core-mcp = "graph_core.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
